# job-tracker

./: .env.example  .gitignore  AGENTS.md  COVERAGE.md  PRIMER.md  README.md  pyproject.toml  requirements.txt
config/: framework.yaml  gmail.env.example
docs/: CATEGORY_HANDLER_EXTENSIBILITY.md  JOB_CRM_VISION.md
scripts/: add_job.py  apply_package.py  attach_document.py  backfill_apply_url_weblocs.py  backfill_apply_urls.py  backfill_jd_and_no_llm_review.py  backfill_manual_leads_2026_07.py  backfill_no_llm_review_from_jd_files.py  backfill_post_application_signals.py  check_per_file_coverage.py  classify_inbox.py  coverage.sh  delete_lead.py  evaluate_backlog.py  export_communications.py  find_duplicate_companies.py  find_duplicate_titles.py  fix_cole_directv_duplicate_leads.py  generate_message.py  list_contacts.py  list_leads.py  log_contact.py  move_packages_without_full_llm_review.py  no_llm_review.py  process_awaiting_llm_review.py  regenerate_application_docs_for_confirmed_pursue.py  render_pending_actions.py  resolve_communication.py  resolve_jd.py  resync_labels.py  run_full_llm_review_for_pursue_leads.py  run_pipeline.py  scan_communications.py  triage_imap_inbox.py  triage_recruiter_inbox.py  unemployment_claim_report.py
src/job_tracker/: __init__.py  htmltext.py
src/job_tracker/ats/: __init__.py  jd_resolver.py
src/job_tracker/cli/: add_job.py  apply_package.py  attach_document.py  backfill_post_application_signals.py  classify_inbox.py  delete_lead.py  evaluate_backlog.py  export_communications.py  generate_message.py  list_contacts.py  list_leads.py  log_contact.py  merge_leads.py  no_llm_review.py  process_awaiting_llm_review.py  resolve_communication.py  resolve_jd.py  resync_labels.py  review_direct_recruiter_outreach.py  run_pipeline.py  scan_communications.py  set_direct_recruiter_outreach.py  triage_imap_inbox.py  triage_recruiter_inbox.py
src/job_tracker/email/: __init__.py  classifier.py  gmail_reader.py  gmail_writer.py  imap_reader.py  labels.py  models.py
src/job_tracker/pipeline/: __init__.py  comms_match.py  extract.py  letter_style.py  llm_apply.py  llm_extract.py  llm_interview.py  models.py  post_application.py  run.py  signature.py  store.py  triage.py
src/job_tracker/scoring/: __init__.py  scorer.py
tests/: test_add_job.py  test_apply_package.py  test_attach_document.py  test_backfill_post_application_signals.py  test_choose_apply_url.py  test_classifier.py  test_classify_inbox.py  test_communications.py  test_delete_lead.py  test_evaluate_backlog.py  test_export_communications.py  test_extract.py  test_find_duplicate_companies.py  test_find_duplicate_titles.py  test_generate_message.py  test_gmail_reader.py  test_gmail_reader_fakes.py  test_gmail_writer.py  test_htmltext.py  test_imap_reader.py  test_jd_resolver.py  test_jd_resolver_offline.py  test_jd_resolver_providers.py  test_list_contacts.py  test_list_leads.py  test_llm_apply.py  test_llm_extract.py  test_llm_extract_edges.py  test_llm_interview.py  test_log_contact.py  test_merge_leads.py  test_no_llm_review.py  test_package_init.py  test_pipeline.py  test_post_application.py  test_process_awaiting_llm_review.py  test_render_pending_actions.py  test_resolve_jd_cli.py  test_resync_labels.py  test_review_direct_recruiter_outreach.py  (+9 more)
tests/fixtures/: ats_search_agent_digest.json  indeed_digest.json  job_board_flattened_digest.json  job_board_marketing_noise.json  linkedin_digest.json  multi_jd_in_body.json  newsletter_noise.json  recruiter_outreach.json  ref_no_web_aggregation_digest.json  rejection.json  stripe_single_jd.json
tools/refresh-pending/: Info.plist  README.md  install.sh  main.swift
tools/reveal-folder/: Info.plist  README.md  install.sh  main.swift
tools/set-direct-recruiter-outreach/: Info.plist  README.md  install.sh  main.swift
tools/view-communications/: Info.plist  README.md  install.sh  main.swift
