[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-tracker"
version = "0.1.0"
description = "Job-search automation pipeline for recruiting inbox processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "python-docx>=1.1.0",
    "fpdf2>=2.8.0",
]

[project.scripts]
resolve-jd = "job_tracker.cli.resolve_jd:main"
classify-inbox = "job_tracker.cli.classify_inbox:main"
run-pipeline = "job_tracker.cli.run_pipeline:main"
list-leads = "job_tracker.cli.list_leads:main"
no-llm-review = "job_tracker.cli.no_llm_review:main"
apply-package = "job_tracker.cli.apply_package:main"
evaluate-backlog = "job_tracker.cli.evaluate_backlog:main"
triage-recruiter-inbox = "job_tracker.cli.triage_recruiter_inbox:main"
add-job = "job_tracker.cli.add_job:main"
log-contact = "job_tracker.cli.log_contact:main"
attach-document = "job_tracker.cli.attach_document:main"
list-contacts = "job_tracker.cli.list_contacts:main"
generate-message = "job_tracker.cli.generate_message:main"
delete-lead = "job_tracker.cli.delete_lead:main"
scan-communications = "job_tracker.cli.scan_communications:main"
resolve-communication = "job_tracker.cli.resolve_communication:main"
export-communications = "job_tracker.cli.export_communications:main"
resync-labels = "job_tracker.cli.resync_labels:main"
process-awaiting-llm-review = "job_tracker.cli.process_awaiting_llm_review:main"
review-direct-recruiter-outreach = "job_tracker.cli.review_direct_recruiter_outreach:main"
set-direct-recruiter-outreach = "job_tracker.cli.set_direct_recruiter_outreach:main"
merge-leads = "job_tracker.cli.merge_leads:main"
triage-imap-inbox = "job_tracker.cli.triage_imap_inbox:main"
backfill-post-application-signals = "job_tracker.cli.backfill_post_application_signals:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["job_tracker"]
branch = true
omit = [
    "*/__main__.py",
]

[tool.coverage.report]
# Soft interim floor — raise toward 90 once per-file gaps close. Hard CI
# fail_under=90 is deferred; use scripts/check_per_file_coverage.py for
# per-file reporting (see COVERAGE.md).
fail_under = 70
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
